# Empty-Project

./: CMakeLists.txt  README.md  x64-windows-custom.cmake
.github/workflows/: build_linux.yml  build_linux_clang.yml  build_macos.yml  build_win.yml
src/: main.cpp
